use parser on minimal file

--- a/scdms_soudan_parser.ipynb
+++ b/scdms_soudan_parser.ipynb
@@ -408,6 +408,34 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"minimal_sample.soudan\", 'rb') as input_f:\n",
+    "    raw_data = input_f.read()\n",
+    "    # Switch between soudan and test for different amounts of parsing\n",
+    "    parsed_data = soudan.parse(raw_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parsed_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def parse_file(input_path, output_path, use_test_parse=True):\n",
     "    if use_test_parse:\n",
@@ -848,9 +876,9 @@
     "#input_path = \"/data3/afisher/test/01130208_1838_F0006\"\n",
     "\n",
     "# This one should contain cut content\n",
-    "input_path = '/data3/afisher/soudan-R135/01150212_1819/01150212_1819_F0001'\n",
+    "input_path = 'minimal_sample.soudan'\n",
     "#output_path = \"/home/afisher@novateur.com/dataReaderWriter/NovateurData/01150212_1819_F0001_test_parse.hdf5\"\n",
-    "output_path = \"/home/afisher@novateur.com/dataReaderWriter/NovateurData/01150212_1819_F0001_parsed.hdf5\"\n",
+    "output_path = \"minimal_sample.hdf5\"\n",
     "\n",
     "# For final files, save onto novateur network:\n",
     "#output_path = \"/data3/afisher/test/parsed_files/01150212_1819_F0001_parsed.hdf5\"\n",
@@ -864,24 +892,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append('/home/afisher@novateur.com/dataReaderWriter/scdms_soudan/')\n",
-    "import csv_metadata\n",
-    "print('Import successful')\n",
-    "\n",
-    "# Path valid from F0001 to F0038\n",
-    "parsed_hdf5_file_path = '/home/afisher@novateur.com/dataReaderWriter/NovateurData/01150212_1819_F0001_parsed.hdf5' #'/data3/afisher/test/parsed_files/01150212_1819_F0001_parsed.hdf5'\n",
-    "trace_output_file_path = '/home/afisher@novateur.com/dataReaderWriter/NovateurData/get_trace_data_test.hdf5'\n",
-    "cut_output_file_path = '/home/afisher@novateur.com/dataReaderWriter/NovateurData/get_cut_data_test.hdf5'\n",
-    "\n",
-    "# Load cdms id file\n",
-    "cdms_ids_file_path = '/data3/afisher/cdmslite-run3-cuts-output/ID_CDMSliteR3.csv'\n",
-    "\n",
-    "\n",
-    "series_number, event_numbers = csv_metadata.get_series_and_event_numbers(parsed_hdf5_file_path)\n",
-    "event_number = event_numbers[0]\n",
-    "print(f'Range of event numbers in file: {event_numbers[0]} to {event_numbers[-1]}')\n",
-    "csv_metadata.get_single_event_metadata(event_number, cdms_ids_file_path, parsed_hdf5_file_path, trace_output_file_path, cut_output_file_path, is_test=False)"
+    "import h5py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = h5py.File(\"minimal_sample.hdf5\", 'r')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f.visititems(print_structure)"
    ]
   },
   {
